Add matrix-pure-template project

--- a/generic_datasource_client/src/main/webapp/business_kit.html
+++ b/generic_datasource_client/src/main/webapp/business_kit.html
@@ -459,7 +459,7 @@
                     <div class="row">
                       <div class="pull-right">
                         <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
-                        <button id='execute-button' type="button" class="btn btn-sm btn-success" onclick="runService()">Execute</button>
+                        <button id='execute-button' type="button" class="btn btn-sm btn-success" onclick="default_execute()">Execute</button>
                       </div>
                     </div>
                   </div>
