--- a/generic_datasource_client/src/main/webapp/business_gallery.html
+++ b/generic_datasource_client/src/main/webapp/business_gallery.html
@@ -81,8 +81,32 @@
       <!--VALIDATION DIV FINISHED-->
 
       <!--BUSINESS DIV BEGIN-->
-
-      <!--BUSINESS DIV BEGIN-->
+      <div class="row">
+          <div data-bind="if:businessPOJO()">
+              <div data-bind="with:businessPOJO().elements">
+                  <!--ko foreach: viewData-->
+                  <div class="col-xs-12" style="margin-bottom:18px;">
+                      <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){alert(JSON.stringify($data));}}">
+                        <div class="card-body">
+                          <i class="icon fa fa-edit fa-4x"></i>
+                          <div class="content">
+                            <div class="title">
+                              <span  data-bind="text:creator" style="margin-right: 8px;"></span>
+                              <span  data-bind="text:(function(){return new Date(parseInt(numberalpha)).toLocaleString()})()" style="margin-right: 8px;"></span>
+                            </div>
+                            <div class="value">
+                                <span class="sign" data-bind="text:description"></span>
+                                <span data-bind="text:name"></span>
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                  </div>
+                  <!-- /ko -->
+              </div>
+          </div>
+      </div>
+      <!--BUSINESS DIV FINISHED-->
 
 
       <!--TEMPLATE DIV BEGIN-->
@@ -91,67 +115,56 @@
       <div id="template-matrix-footer-div"></div>
       <!--TEMPLATE DIV BEGIN-->
     </div>
+  </div>
+  <!-- Javascript for Matrix Referenced -->
+  <script src="assets/reference/flat-admin/assets/js/vendor_min.js"></script>
+  <script src="assets/reference/flat-admin/assets/js/app.js"></script>
+  <script src="assets/reference/codemirror/codemirror.js"></script>
+  <script src="assets/reference/codemirror/mode/javascript/javascript.js"></script>
+  <script src="assets/reference/codemirror/mode/markdown/markdown.js"></script>
+  <script src="assets/reference/jquery/jquery.json.js"></script>
+  <script src="assets/reference/jquery/jquery.blockUI.js"></script>
+  <script src="assets/reference/knockout.js/knockout-3.3.0.js"></script>
+  <script src="assets/reference/jquery-tiny-pubsub/tiny-pubsub.js"></script>
+  <script src="assets/reference/markdown/markdown.min.js"></script>
+  <script src="assets/reference/jquery-ui/jquery-ui.js"></script>
+  <script src="assets/reference/lodash/lodash-4.15.0.js"></script>
+  <script src="assets/reference/gridstack/gridstack.all.js"></script>
+  <script src="assets/reference/echarts/echarts-min.js"></script>
+  <script src="assets/reference/echarts/dataTools.js"></script>
+  <!-- Javascript for Matrix Self Owned -->
+  <script src="assets/self-owned/js/generic/generic_algorithm.js"></script>
+  <script src="assets/self-owned/js/generic/generic_cache.js"></script>
+  <script src="assets/self-owned/js/generic/generic_charting_v4.js"></script>
+  <script src="assets/self-owned/js/generic/generic_csv.js"></script>
+  <script src="assets/self-owned/js/generic/generic_cud.js"></script>
+  <script src="assets/self-owned/js/generic/generic_modal.js"></script>
+  <script src="assets/self-owned/js/generic/generic_query.js"></script>
+  <script src="assets/self-owned/js/generic/generic_table.js"></script>
+  <script src="assets/self-owned/js/generic/generic_util.js"></script>
+  <script src="assets/self-owned/js/generic/generic_validation.js"></script>
+  <script src="assets/self-owned/js/generic/generic_workbench.js"></script>
+  <script src="assets/self-owned/js/generic/generic_dynamic.js"></script>
+  <script src="assets/self-owned/js/generic/generic_vm.js"></script>
+  <script src="assets/self-owned/js/ds/gallery_business.js"></script>
 
-    <!-- Javascript for Matrix Referenced -->
-    <script src="assets/reference/flat-admin/assets/js/vendor_min.js"></script>
-    <script src="assets/reference/flat-admin/assets/js/app.js"></script>
-    <script src="assets/reference/codemirror/codemirror.js"></script>
-    <script src="assets/reference/codemirror/mode/javascript/javascript.js"></script>
-    <script src="assets/reference/codemirror/mode/markdown/markdown.js"></script>
-    <script src="assets/reference/jquery/jquery.json.js"></script>
-    <script src="assets/reference/jquery/jquery.blockUI.js"></script>
-    <script src="assets/reference/knockout.js/knockout-3.3.0.js"></script>
-    <script src="assets/reference/jquery-tiny-pubsub/tiny-pubsub.js"></script>
-    <script src="assets/reference/markdown/markdown.min.js"></script>
-    <script src="assets/reference/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/reference/lodash/lodash-4.15.0.js"></script>
-    <script src="assets/reference/gridstack/gridstack.all.js"></script>
-    <script src="assets/reference/echarts/echarts-min.js"></script>
-    <script src="assets/reference/echarts/dataTools.js"></script>
-    <!-- Javascript for Matrix Self Owned -->
-    <script src="assets/self-owned/js/generic/generic_algorithm.js"></script>
-    <script src="assets/self-owned/js/generic/generic_cache.js"></script>
-    <script src="assets/self-owned/js/generic/generic_charting_v4.js"></script>
-    <script src="assets/self-owned/js/generic/generic_csv.js"></script>
-    <script src="assets/self-owned/js/generic/generic_cud.js"></script>
-    <script src="assets/self-owned/js/generic/generic_modal.js"></script>
-    <script src="assets/self-owned/js/generic/generic_query.js"></script>
-    <script src="assets/self-owned/js/generic/generic_table.js"></script>
-    <script src="assets/self-owned/js/generic/generic_util.js"></script>
-    <script src="assets/self-owned/js/generic/generic_validation.js"></script>
-    <script src="assets/self-owned/js/generic/generic_workbench.js"></script>
-    <script src="assets/self-owned/js/generic/generic_dynamic.js"></script>
-    <script src="assets/self-owned/js/generic/generic_vm.js"></script>
 
+  <script>
+    $(document).ready(function() {
+      $('#sidebar').load($.getRootPath() + '/components/left_side.html');
+      $('#navbar').load($.getRootPath() + '/components/header.html');
+      $('#template-matrix-dynamic-table-div').load($.getRootPath() + '/components/template-matrix-dynamic-table.html');
+      $('#template-matrix-modal-div').load($.getRootPath() + '/components/template-matrix-modal.html');
+      $('#template-matrix-footer-div').load($.getRootPath() + '/components/footer.html');
 
-    <script>
-      $(document).ready(function() {
-        $('#sidebar').load($.getRootPath() + '/components/left_side.html');
-        $('#navbar').load($.getRootPath() + '/components/header.html');
-        $('#template-matrix-dynamic-table-div').load($.getRootPath() + '/components/template-matrix-dynamic-table.html');
-        $('#template-matrix-modal-div').load($.getRootPath() + '/components/template-matrix-modal.html');
-        $('#template-matrix-footer-div').load($.getRootPath() + '/components/footer.html');
-
-        setTimeout(function() {
-          resetCssClass('li_gallery', 'active');
-          $('#navbar_search_li').css('display', '');
-        }, 200)
-      });
-    </script>
-
-    <script>
-      // *******Data Bind JS Code*******
-      // Initialize Generic Page View Model as entire page data bind parent element
-      var vm = new GenericPageViewModel();
-      // Clean Data Bind Node
-      ko.cleanNode($('#template-matrix-main-div')[0]);
-      // Apply data bind in view model and the whole dom
-      ko.applyBindings(vm, document.getElementById('template-matrix-main-div'));
-      // Refrence the entire page view model to current view model as cache
-      current_vm = vm;
-      //Entire page unit test suite
-      UNIT_TEST_SUITE();
-    </script>
+      setTimeout(function() {
+        resetCssClass('li_gallery', 'active');
+        $('#navbar_title_li').text('Matrix Data Source Gallery');
+        $('#navbar_search_li').css('display', '');
+      }, 200)
+    });
+    $.subscribe("get_user_detail_chain_finished", env_setup);
+  </script>
 
 </body>
 
