--- a/generic_charting_client/src/main/webapp/module_chart_editor.html
+++ b/generic_charting_client/src/main/webapp/module_chart_editor.html
@@ -64,8 +64,23 @@
 
                 <div class="row" onresize="alert('You have changed the size of the window')">
                     <div class="col-md-8" id="chart_content_div" style="margin-top:30px" onresize="console.log(1)">
+
                         <div class="card card-mini">
                             <div class="card-body" id="chart_content_body_div" style="min-height:360px">
+                                                              <!--LOADER DIV BEGIN-->
+              <div class="loader-container text-center">
+                <div class="icon">
+                  <div class="sk-wave">
+                    <div class="sk-rect sk-rect1"></div>
+                    <div class="sk-rect sk-rect2"></div>
+                    <div class="sk-rect sk-rect3"></div>
+                    <div class="sk-rect sk-rect4"></div>
+                    <div class="sk-rect sk-rect5"></div>
+                  </div>
+                </div>
+                <div class="title">Loading</div>
+              </div>
+              <!--LOADER DIV END-->
                                 <div id="main_chart" style="width: 100%;height:100%;min-height:660px"></div>
                             </div>
                         </div>
