--- a/generic_datasource_client/src/main/webapp/business_gallery.html
+++ b/generic_datasource_client/src/main/webapp/business_gallery.html
@@ -86,7 +86,7 @@
               <div data-bind="with:businessPOJO().elements">
                   <!--ko foreach: viewData-->
                   <div class="col-xs-12" style="margin-bottom:18px;">
-                      <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){alert(JSON.stringify($data));}}">
+                      <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){default_switch2detail_page($data,'/business_kit.html','update','MATRIX_DATA_SOURCE_CURRENT')}}">
                         <div class="card-body">
                           <i class="icon fa fa-edit fa-4x"></i>
                           <div class="content">
@@ -164,6 +164,7 @@
       }, 200)
     });
     $.subscribe("get_user_detail_chain_finished", env_setup);
+
   </script>
 
 </body>
