Add matrix-pure-template project

--- a/generic_portal_client/src/main/webapp/portal.html
+++ b/generic_portal_client/src/main/webapp/portal.html
@@ -123,6 +123,12 @@
                       </a>
                     </li>
                     <li>
+                      <a href="http://localhost:8080/generic_datasource_client/" target="_blank">
+                        <i class="fa fa-superscript"></i>
+                        <div>Data Source System</div>
+                      </a>
+                    </li>
+                    <li>
                       <a href="http://localhost:8080/generic_report_client/" target="_blank">
                         <i class="fa fa-file-pdf-o"></i>
                         <div>Report System</div>
